pagination can be disabled, included in 3.3.7

--- a/app/assets/stylesheets/record_select.css.erb
+++ b/app/assets/stylesheets/record_select.css.erb
@@ -38,6 +38,11 @@
   clear: both;
 }
 
+.record-select ol.scrollable {
+  max-height: 200px;
+  overflow: auto;
+}
+
 .record-select .record, .record-select a {
   cursor: pointer;
   color: #0066cc;
