css for selected record

--- a/app/assets/stylesheets/record_select.css.erb
+++ b/app/assets/stylesheets/record_select.css.erb
@@ -140,3 +140,11 @@ iframe.record-select-mask {
   float: left;
   margin-right: 5px;
 }
+
+.recordselect.selected {
+  background-color: #EFFFEF;
+  background-position: right 2px center;
+  background-image: url('/assets/record_select/accept.png');
+  background-repeat: no-repeat;
+  padding-right: 20px;
+}
