--- a/app/views/record_select/_list.html.erb
+++ b/app/views/record_select/_list.html.erb
@@ -1,7 +1,7 @@
 <%
 controller ||= params[:controller]
 
-pagination_url_params = params.permit(:search).permit(*permit_rs_browse_params).merge(:controller => controller, :action => :browse, :search => params[:search], :update => 1)
+pagination_url_params = params.permit(*([:search] + permit_rs_browse_params)).merge(:controller => controller, :action => :browse, :search => params[:search], :update => 1)
 prev_url = url_for(pagination_url_params.merge(:page => page.prev.number)) if page.prev?
 next_url = url_for(pagination_url_params.merge(:page => page.next.number)) if page.next?
 -%>
