--- a/app/views/record_select/_browse.html.erb
+++ b/app/views/record_select/_browse.html.erb
@@ -6,3 +6,6 @@ record_select_id = record_select_id(controller)
   <%= render_record_select :partial => 'search', :locals => {:controller => controller, :record_select_id => record_select_id} %>
   <%= render_record_select :partial => 'list', :locals => {:controller => controller, :page => @page, :record_select_id => record_select_id} %>
 </div>
+<%= javascript_tag do %>
+  <%= render :partial => 'highlight', :formats => [:js] %>
+<% end %>
