--- a/app/views/record_select/browse.js.erb
+++ b/app/views/record_select/browse.js.erb
@@ -1,1 +1,2 @@
 RecordSelect.render_page('<%= record_select_id %>', '<%= escape_javascript(render_record_select(:partial => 'list', :locals => {:page => @page})) %>');
+<%= render :partial => 'highlight', :formats => [:js] %>
